[package]
name = "greenpass"
version = "0.1.0"
description = "Rust crate to parse EU Digital Green Certificates for COVID-19"
repository = "https://github.com/mcilloni/greenpass"
license = "MPL-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
base45 = "3.0.0"
chrono = "0.4.19"
clap = "3.0.0-beta.2"
flate2 = "1.0.20"
serde = "1.0.126"
serde_cbor = "0.11.1"
serde_derive = "1.0.126"
thiserror = "1.0.25"
