[package]
name = "greenpass"
authors = ["Marco Cilloni <m.c.cilloni@gmail.com>"]
version = "0.2.0"
description = "Rust crate to parse EU Digital Green Certificates for COVID-19"
repository = "https://github.com/mcilloni/greenpass"
license = "MPL-2.0"
edition = "2021"
exclude = ["fuzz/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
base45 = "3.0.0"
chrono = "0.4.19"
ciborium = "0.2.0"
clap = { version = "3.0.13", features = ["derive"], optional = true }
flate2 = "1.0.22"
hex = "0.4.3"
serde = "1.0.136"
serde_derive = "1.0.136"
thiserror = "1.0.30"

[[bin]]
name = "greenpass"
required-features = ["cli"]
